--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <!-- ---- Lato Font ---- -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet"
-
-    <!-- ------ favicon ------ -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap" rel="stylesheet" <!-- ------
+        favicon ------ -->
     <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -33,20 +32,23 @@
         </div>
     </header>
     <a href="#category-nav">
-    <div class="top-btn">
-        <ion-icon name="arrow-up-circle-outline"></ion-icon>
-    </div></a>
+        <div class="top-btn">
+            <ion-icon name="arrow-up-circle-outline"></ion-icon>
+        </div>
+    </a>
     <!-- ----- hero ------ -->
     <section class="banner">
         <div class="content">
             <h1>Resource Mark</h1>
             <h3>A curated list of resources for Designing and Development.</h3>
         </div>
-        <!-- <form action="" class="sumbit-form">
+
+        <form action="" class="sumbit-form">
             <input type="text" name="resource-name" id="" placeholder="Resource Name">
             <input type="text" name="resource-url" id="" placeholder="Resource URL">
             <button type="submit">Submit</button>
-        </form> -->
+        </form>
+        <p>Add a Resource</p>
     </section>
     <nav class="group-nav" id="category-nav">
         <!-- <div class="container"> -->
@@ -293,10 +295,18 @@
             <p>Designed and Developed with &hearts; by <a href="#" class="footer-link">Abdullah Sajjad</a></p>
         </div>
         <div class="footer--social-links">
-            <a href="https://www.facebook.com/profile.php?id=100047766791619"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="https://github.com/Abdullah-webdev/"><ion-icon name="logo-github"></ion-icon></a>
-            <a href="https://twitter.com/NoName17228303"><ion-icon name="logo-twitter"></ion-icon></a>
-            <a href="https://codepen.io/abdullah-webdev/"><ion-icon name="logo-codepen"></ion-icon></a>
+            <a href="https://www.facebook.com/profile.php?id=100047766791619">
+                <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+            <a href="https://github.com/Abdullah-webdev/">
+                <ion-icon name="logo-github"></ion-icon>
+            </a>
+            <a href="https://twitter.com/NoName17228303">
+                <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a href="https://codepen.io/abdullah-webdev/">
+                <ion-icon name="logo-codepen"></ion-icon>
+            </a>
         </div>
     </footer>
 
