added form working

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>A curated list of resources for Designing and Development.</h3>
         </div>
 
-        <form action="" class="sumbit-form">
+        <form action="https://usebasin.com/f/e924d14cf4be" method="POST" class="sumbit-form">
             <input type="text" name="resource-name" id="" placeholder="Resource Name">
             <input type="text" name="resource-url" id="" placeholder="Resource URL">
             <button type="submit">Submit</button>
