--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- -------------------- -->
     <title>Resourcesmark</title>
-    <meta name="description" content="">
+    <meta name="description" content="ResourcesMark is website containing a curated list of Resources for Developers and Designers. Add a resource if you think that's missing.">
 </head>
 
 <body>
