--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <meta name="theme-color" content="#ffffff">
     <!-- -------------------- -->
     <title>Resourcesmark</title>
-    <meta name="description" content="ResourcesMark is website containing a curated list of Resources for Developers and Designers. Add a resource if you think that's missing.">
+    <meta name="description"
+        content="ResourcesMark is website containing a curated list of Resources for Developers and Designers. Add a resource if you think that's missing.">
 </head>
 
 <body>
@@ -55,25 +56,28 @@
         <!-- <div class="container"> -->
         <ul>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="terminal-outline"></ion-icon>Tools
+                    <ion-icon name="bulb-outline"></ion-icon>Learning
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="cloud-upload-outline"></ion-icon>Deployment - Testing
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="color-palette-outline"></ion-icon>Colors
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="bulb-outline"></ion-icon>Inspiration
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="bookmarks-outline"></ion-icon>More Useful
+                    <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="book-outline"></ion-icon>Reading
                 </a></li>
             <li><a href="" class="group-nav-link">
+                    <ion-icon name="documents-outline"></ion-icon>References - CheatSheets
+                </a></li>
+            <li><a href="" class="group-nav-link">
+                    <ion-icon name="information-outline"></ion-icon>Problem-Solving - Challenges
+                </a></li>
+            <li><a href="" class="group-nav-link">
                     <ion-icon name="chatbubbles-outline"></ion-icon>Communities - Blogs
+                </a></li>
+            <li><a href="" class="group-nav-link">
+                    <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
+                </a></li>
+            <li><a href="" class="group-nav-link">
+                    <ion-icon name="terminal-outline"></ion-icon>Tools
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="logo-html5"></ion-icon>HTML
@@ -82,34 +86,31 @@
                     <ion-icon name="logo-css3"></ion-icon>CSS
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="images-outline"></ion-icon>Images - Videos
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="documents-outline"></ion-icon>References - CheatSheets
-                </a></li>
-            <li><a href="" class="group-nav-link">
                     <ion-icon name="code-slash-outline"></ion-icon>Frameworks - Libraries
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="information-outline"></ion-icon>Problem-Solving - Challenges
-                </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="paper-plane-outline"></ion-icon>Icons
+                    <ion-icon name="bulb-outline"></ion-icon>Inspiration
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="newspaper-outline"></ion-icon>Templtes
                 </a></li>
             <li><a href="" class="group-nav-link">
+                    <ion-icon name="images-outline"></ion-icon>UI Graphics
+                </a></li>
+            <li><a href="" class="group-nav-link">
+                    <ion-icon name="color-palette-outline"></ion-icon>Colors
+                </a></li>
+            <li><a href="" class="group-nav-link">
                     <ion-icon name="document-text-outline"></ion-icon>Typography
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
+                    <ion-icon name="paper-plane-outline"></ion-icon>Icons
                 </a></li>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="bulb-outline"></ion-icon>Learning
+                    <ion-icon name="cloud-upload-outline"></ion-icon>Deployment - Testing
+                </a></li>
+            <li><a href="" class="group-nav-link">
+                    <ion-icon name="bookmarks-outline"></ion-icon>More Useful
                 </a></li>
         </ul>
         <!-- </div> -->
