started online-tutorials

--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
         <!-- <div class="container"> -->
         <ul>
             <li><a href="" class="group-nav-link">
-                    <ion-icon name="bulb-outline"></ion-icon>Learning
+                    <ion-icon name="bulb-outline"></ion-icon>Online Courses
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="shapes-outline"></ion-icon>Interactive Tutorials
+                </a></li>
+            <li><a href="" class="group-nav-link">
+                    <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
                 </a></li>
             <li><a href="" class="group-nav-link">
                     <ion-icon name="book-outline"></ion-icon>Reading
@@ -73,9 +76,7 @@
             <li><a href="" class="group-nav-link">
                     <ion-icon name="chatbubbles-outline"></ion-icon>Communities - Blogs
                 </a></li>
-            <li><a href="" class="group-nav-link">
-                    <ion-icon name="logo-youtube"></ion-icon>Youtube Channels
-                </a></li>
+
             <li><a href="" class="group-nav-link">
                     <ion-icon name="terminal-outline"></ion-icon>Tools
                 </a></li>
@@ -142,7 +143,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/atom.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/atom.png" alt="atom"></div>
                             <h3>Atom</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
                             <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon
@@ -151,7 +152,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/sublime.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/sublime.png" alt="sublime text"></div>
                             <h3>Sublime Text</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
                             <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon
@@ -160,7 +161,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/brackets.jpg" alt="VS-Code"></div>
+                                <img src="/resources/icons/brackets.jpg" alt="brackets editor"></div>
                             <h3>Brackets</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
                             <a href="https://brackets.io/" class="visit-btn" target="blank">Visit<ion-icon
@@ -169,7 +170,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/codepen.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/codepen.png" alt="codepen"></div>
                             <h3>Codepen</h3>
                             <p>CodePen is an online community for testing and showcasing user-created HTML, CSS and
                                 JavaScript code snippets.</p>
@@ -179,7 +180,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/emmet.svg" alt="VS-Code"></div>
+                                <img src="/resources/icons/emmet.svg" alt="emmet"></div>
                             <h3>Emmet</h3>
                             <p>Emmet is a plugin for many popular text editors which greatly improves HTML & CSS
                                 workflow.</p>
@@ -189,7 +190,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/git.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/git.png" alt="git"></div>
                             <h3>Git</h3>
                             <p>Git is a free and open source distributed version control system designed to handle
                                 everything from small to very large projects with speed and efficiency.</p>
@@ -199,7 +200,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/github.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/github.png" alt="github"></div>
                             <h3>GitHub</h3>
                             <p>GitHub, Inc. is a subsidiary of Microsoft which provides hosting for software development
                                 and version control using Git.</p>
@@ -209,7 +210,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/gitlab.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/gitlab.png" alt="gitlab"></div>
                             <h3>GitLab</h3>
                             <p>GitLab is an open source end-to-end software development platform with built-in version
                                 control, issue tracking, code review, CI/CD, and more</p>
@@ -219,7 +220,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/figma.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/figma.png" alt="figma"></div>
                             <h3>Figma</h3>
                             <p>Figma is a vector graphics editor and prototyping tool which is primarily web-based, with
                                 additional offline features enabled by desktop applications for macOS and Windows.</p>
@@ -229,7 +230,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/insomnia.jpg" alt="VS-Code"></div>
+                                <img src="/resources/icons/insomnia.jpg" alt="insomnia"></div>
                             <h3>Insomnia</h3>
                             <p>Insomnia is a great application to help you work with APIs as a developer. It's really
                                 easy to customize to suit your own workflows and preferences.</p>
@@ -239,7 +240,7 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/codesandbox.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/codesandbox.png" alt="codesandbox"></div>
                             <h3>CodeSandbox</h3>
                             <p>CodeSandbox is an amazing tool to help you prototype ideas with code. Quickly spin up new
                                 sandboxes with pre-configured templates and easily share your code with others.</p>
@@ -249,18 +250,75 @@
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/hyper.png" alt="VS-Code"></div>
+                                <img src="/resources/icons/hyper.png" alt="hyper"></div>
                             <h3>Hyper</h3>
                             <p>Hyper is a beautiful and fast Electron-based terminal created by the team at Vercel. It's
                                 fully extensible and easy to customize to help speed up your workflow.</p>
-                            <a href="https://codesandbox.io/" class="visit-btn" target="blank">Visit<ion-icon
+                            <a href="https://hyper.is/" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon></a>
                         </div>
 
 
                     </article>
                 </section>
-                <section class="group group-" id=""></section>
+
+                <!-- --------- Online-Courses --------------- -->
+
+
+                <section class="group group-online-courses" id="Online-Courses">
+                    <!-- ---- section-header ------ -->
+                    <header class="group-header">
+                        <ion-icon name="bulb-outline"></ion-icon>
+                        <h2>Online Courses</h2>
+                    </header>
+                    <!-- ---------- section-cards ------ -->
+                    <article class="group-cards">
+
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/freecodecamp.jpg" alt="freecodecamp"></div>
+                            <h3>freecodecamp</h3>
+                            <p>Offering some amazing tracks, freeCodeCamp is one of the top resources for learning HTML, CSS and JavaScript online. Plus...it's free! Can't really argue with that.</p>
+                            <a href="https://www.freecodecamp.org/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/codecademy.svg" alt="freecodecamp"></div>
+                            <h3>Codecademy</h3>
+                            <p>Codecademy offers a number of free lessons for a variety of languages. To get the full courses, you typically need to sign up to the pro membership. But you can get a lot of learning done for free.</p>
+                            <a href="https://www.codecademy.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/udacity.jpg" alt="freecodecamp"></div>
+                            <h3>Udacity</h3>
+                            <p>Udacity offers an incredible array of free individual courses. They also offer paid nanodegree programmes if you're looking for something with more structure.</p>
+                            <a href="https://udacity.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/frontendmasterts.jpg" alt="freecodecamp"></div>
+                            <h3>Frontend Masters Bootcamp</h3>
+                            <p>The free Frontend Masters Bootcamp is a great way to get up and running with HTML, CSS, and JavaScript.</p>
+                            <a href="https://frontendmasters.com/bootcamp/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/" alt="freecodecamp"></div>
+                            <h3></h3>
+                            <p></p>
+                            <a href="" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+
+                    </article>
+                </section>
+
+
                 <!-- <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
                 <section class="group group-" id=""></section>
