added online tutorials

--- a/index.html
+++ b/index.html
@@ -279,40 +279,144 @@
                             <div class="icon-box">
                                 <img src="/resources/icons/freecodecamp.jpg" alt="freecodecamp"></div>
                             <h3>freecodecamp</h3>
-                            <p>Offering some amazing tracks, freeCodeCamp is one of the top resources for learning HTML, CSS and JavaScript online. Plus...it's free! Can't really argue with that.</p>
-                            <a href="https://www.freecodecamp.org/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Offering some amazing tracks, freeCodeCamp is one of the top resources for learning HTML,
+                                CSS and JavaScript online. Plus...it's free! Can't really argue with that.</p>
+                            <a href="https://www.freecodecamp.org/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/codecademy.svg" alt="freecodecamp"></div>
+                                <img src="/resources/icons/codecademy.png" alt="codecademy"></div>
                             <h3>Codecademy</h3>
-                            <p>Codecademy offers a number of free lessons for a variety of languages. To get the full courses, you typically need to sign up to the pro membership. But you can get a lot of learning done for free.</p>
-                            <a href="https://www.codecademy.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Codecademy offers a number of free lessons for a variety of languages. To get the full
+                                courses, you typically need to sign up to the pro membership. But you can get a lot of
+                                learning done for free.</p>
+                            <a href="https://www.codecademy.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/udacity.jpg" alt="freecodecamp"></div>
+                                <img src="/resources/icons/udacity.jpg" alt="udacity"></div>
                             <h3>Udacity</h3>
-                            <p>Udacity offers an incredible array of free individual courses. They also offer paid nanodegree programmes if you're looking for something with more structure.</p>
-                            <a href="https://udacity.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>Udacity offers an incredible array of free individual courses. They also offer paid
+                                nanodegree programmes if you're looking for something with more structure.</p>
+                            <a href="https://udacity.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/frontendmasterts.jpg" alt="freecodecamp"></div>
+                                <img src="/resources/icons/frontendmasterts.jpg" alt="frontend-masters"></div>
                             <h3>Frontend Masters Bootcamp</h3>
-                            <p>The free Frontend Masters Bootcamp is a great way to get up and running with HTML, CSS, and JavaScript.</p>
-                            <a href="https://frontendmasters.com/bootcamp/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                            <p>The free Frontend Masters Bootcamp is a great way to get up and running with HTML, CSS,
+                                and JavaScript.</p>
+                            <a href="https://frontendmasters.com/bootcamp/" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
                         <div class="card">
                             <div class="icon-box">
-                                <img src="/resources/icons/" alt="freecodecamp"></div>
-                            <h3></h3>
-                            <p></p>
-                            <a href="" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                                <img src="/resources/icons/cs50.jpg" alt="CS50"></div>
+                            <h3>CS50</h3>
+                            <p>A brilliant resource for anyone who wants to learn some Computer Science. David J. Malan
+                                does an amazing job delivering the course in an engaging way.</p>
+                            <a href="https://www.edx.org/course/cs50s-introduction-computer-science-harvardx-cs50x"
+                                class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/flexbox.io.png" alt="Wes Bos FlexBOx"></div>
+                            <h3>Wes Bos: Flexbox</h3>
+                            <p>Flexbox makes CSS just work, which is no easy feat. Get a perfect introduction to it
+                                here.</p>
+                            <a href="https://flexbox.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/cssgrid.png" alt="Wes Bos: CSS Grid"></div>
+                            <h3>Wes Bos: CSS Grid</h3>
+                            <p>CSS Grid will change how you create website layouts. Learn how for free from Wes Bos in
+                                this brilliant CSS Grid course.</p>
+                            <a href="https://cssgrid.io/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/javascript30.png" alt="Wes Bos: JavaScript 30"></div>
+                            <h3>Wes Bos: JavaScript 30</h3>
+                            <p>Wes Bos offers another amazing (and free) course to help you develop your JavaScript
+                                skills.</p>
+                            <a href="https://javascript30.com/" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon></a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/conquering responsive layout.png"
+                                    alt="Conquering Responsive Layouts"></div>
+                            <h3>Conquering Responsive Layouts</h3>
+                            <p>Kevin Powell takes you through everything you need to know to create responsive layouts
+                                in his brilliant 21-day course.</p>
+                            <a href="https://courses.kevinpowell.co/conquering-responsive-layouts" class="visit-btn"
+                                target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/khanacademy.jpg" alt="Khan Academy"></div>
+                            <h3>Khan Academy</h3>
+                            <p>Khan Academy offers some amazing introductory courses to HTML, CSS and JavaScript. There
+                                is a good mixture of video lessons and coding challenges to keep you interested.</p>
+                            <a href="https://www.khanacademy.org/computing" class="visit-btn" target="blank">Visit
+                                <ion-icon name="open-outline"></ion-icon></a>
+                        </div>
+
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/upcase by thoughtbot.jpg" alt="Upcase by thoughtbot"></div>
+                            <h3>Upcase by thoughtbot</h3>
+                            <p>thoughtbot have very kindly open sourced Upcase, their online learning platform. It's
+                                full of extremely useful "trails" to help you upskill with topics like Mastering Git and
+                                Design for Developers.</p>
+                            <a href="https://thoughtbot.com/upcase" class="visit-btn" target="blank">Visit<ion-icon
+                                    name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/bitdegree.png" alt="bitdegree"></div>
+                            <h3>BitDegree</h3>
+                            <p>BitDegree is the world's first blockchain-powered, smart-incentive based online education platform which will revolutionize global education and tech recruiting.</p>
+                            <a href="https://www.bitdegree.org/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/udemy.png" alt="udemy"></div>
+                            <h3>Udemy</h3>
+                            <p>Udemy is an online learning and teaching marketplace with over 130000 courses and 35 million students.</p>
+                            <a href="www.udemy.com" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
+                        </div>
+                        <!-- --- card ----- -->
+                        <div class="card">
+                            <div class="icon-box">
+                                <img src="/resources/icons/tutsplus.png" alt="Envato Tuts+"></div>
+                            <h3>Envato Tuts+</h3>
+                            <p>Learn new creative and technical skills with 1,290+ video-based courses and short courses to help you develop. From code and web design courses to photography and design & illustration courses, it’s all here.</p>
+                            <a href="https://tutsplus.com/courses#price=free" class="visit-btn" target="blank">Visit<ion-icon name="open-outline"></ion-icon>
+                            </a>
                         </div>
 
                     </article>
