--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <h3>Udemy</h3>
                             <p>Udemy is an online learning and teaching marketplace with over 130000 courses and 35
                                 million students.</p>
-                            <a href="www.udemy.com" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
+                            <a href="https://www.udemy.com" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
                                 </ion-icon>
                             </a>
                         </div>
@@ -430,7 +430,7 @@
                                 <img src="/resources/icons/sublime.png" alt="sublime text"></div>
                             <h3>Sublime Text</h3>
                             <p>Yet Another Code Editor. <br><br><br> </p>
-                            <a href="https://atom.io/" class="visit-btn" target="blank">Visit<ion-icon
+                            <a href="https://sublimetext.com" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
@@ -449,7 +449,7 @@
                             <h3>Codepen</h3>
                             <p>CodePen is an online community for testing and showcasing user-created HTML, CSS and
                                 JavaScript code snippets.</p>
-                            <a href="codepen.io" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
+                            <a href="https://codepen.io" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
                                 </ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
@@ -479,7 +479,7 @@
                             <h3>GitHub</h3>
                             <p>GitHub, Inc. is a subsidiary of Microsoft which provides hosting for software development
                                 and version control using Git.</p>
-                            <a href="github.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
+                            <a href="https://www.github.com/" class="visit-btn" target="blank">Visit<ion-icon name="open-outline">
                                 </ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
@@ -499,7 +499,7 @@
                             <h3>Figma</h3>
                             <p>Figma is a vector graphics editor and prototyping tool which is primarily web-based, with
                                 additional offline features enabled by desktop applications for macOS and Windows.</p>
-                            <a href="www.figma.com/" class="visit-btn" target="blank">Visit<ion-icon
+                            <a href="https://www.figma.com/" class="visit-btn" target="blank">Visit<ion-icon
                                     name="open-outline"></ion-icon></a>
                         </div>
                         <!-- --- card ----- -->
