--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- -------------------- -->
     <title>Resourcesmark</title>
     <meta name="description"
-        content="ResourcesMark is website containing a curated list of Resources for Developers and Designers. Add a resource if you think that's missing.">
+        content="ResourcesMark is website containing a curated list of Resources for Learners and Front-End Developers. Add a resource if you think that's missing.">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
     <section class="banner">
         <div class="content">
             <h1>Resource Mark</h1>
-            <h3>A curated list of resources for Designing and Development.</h3>
+            <h3>A curated list of resources for Learners and Front-End Developers.</h3>
         </div>
 
         <form action="https://usebasin.com/f/e924d14cf4be" method="POST" class="sumbit-form">
